feat(suppliers-service): Complete the management of doctor specialties
- Rename DoctorSpecialtyDto to SpecialtyDetailsDto for clarity.
- Introduce the SpecialtyRepository and SubSpecialtyRepository repositories.
- Refactor the entities, DTOs, controller, and services to support the new specialty structure.
- Finalize adjustments to the V2.0 migration script and other application configurations.